--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "main": "src/index.tsx",
   "dependencies": {
+    "@types/node": "17.0.25",
+    "axios": "^0.26.1",
+    "querystring": "0.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
-    "@types/node": "17.0.25",
-    "querystring": "0.2.1",
     "url": "0.11.0"
   },
   "devDependencies": {
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
+    "prettier": "2.6.2",
     "typescript": "4.6.3"
   },
   "scripts": {
